@@ -1,0 +1,18 @@
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+                             http://maven.apache.org/maven-v4_0_0.xsd">
+    <parent>
+        <artifactId>spring-osgi-integration-test-bundles</artifactId>
+        <groupId>org.springframework.osgi.iandt</groupId>
+        <version>1.2.1-SNAPSHOT</version>
+    </parent>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>org.springframework.osgi.iandt</groupId>
+    <artifactId>export-import-dependency-bundle</artifactId>
+    <packaging>jar</packaging>
+    <name>Spring OSGi Test Bundle: Export Import Dependency Bundle</name>
+    <description>Bundle with beans depending on exporters and importers</description>
+    <url>http://www.springframework.org/osgi</url>
+</project>
+
