@@ -1,0 +1,36 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+       xmlns:osgi="http://www.springframework.org/schema/osgi"
+       xsi:schemaLocation="http://www.springframework.org/schema/beans http://www.springframework.org/schema/beans/spring-beans.xsd
+                      http://www.springframework.org/schema/osgi http://www.springframework.org/schema/osgi/spring-osgi.xsd">
+
+    <osgi:service ref="injected-export">
+        <osgi:interfaces>
+            <value>java.io.Serializable</value>
+            <value>java.lang.Cloneable</value>
+        </osgi:interfaces>
+        <osgi:service-properties>
+            <entry key="type" value="injected-deps"/>
+        </osgi:service-properties>
+    </osgi:service>
+
+
+    <bean id="injected-export" class="org.springframework.osgi.iandt.dependency.SimpleComponent">
+        <property name="optionalDependency" ref="optional"/>
+        <property name="mandatoryDependency" ref="mandatory"/>
+    </bean>
+
+    <osgi:service depends-on="optional mandatory" ref="depends-on-export">
+        <osgi:interfaces>
+            <value>java.io.Serializable</value>
+            <value>java.lang.Cloneable</value>
+        </osgi:interfaces>
+    </osgi:service>
+    
+    <bean id="depends-on-export" class="org.springframework.osgi.iandt.dependency.SimpleComponent"/>
+
+    
+    <osgi:reference id="optional" interface="java.util.SortedSet" cardinality="0..1"/>
+    <osgi:reference id="mandatory" interface="java.util.SortedMap" cardinality="1..1"/>
+</beans>
