@@ -61,6 +61,7 @@
     <module>jdk.proxy.bundle</module>
     <module>extender.listener.bundle</module>
     <module>namespace.own.consumer.bundle</module>
+    <module>export.import.dependency.bundle</module>
     <module>web.bundles</module>
   </modules>
 
